# bitmap-comp-framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backends/: bitmap_backend.hpp  raw_backend.cpp  raw_backend.hpp  roaring_backend.cpp  roaring_backend.hpp  roaring_bitmap.cpp  roaring_bitmap.hpp  wah_backend.cpp  wah_backend.hpp
benchmarks/: bitmap_bench.cpp
common/: bitmap_io.cpp  bitmap_io.hpp  bits.hpp  query.cpp  query.hpp  timing.hpp
data/example/: metadata.txt
scripts/: build.sh  clean.sh  run_example.sh
tools/: generate_queries.cpp
